Inventory: Implemented the TransferProduct endpoint
